Fix bug in template

--- a/config/templates/env.toml
+++ b/config/templates/env.toml
@@ -15,5 +15,5 @@ path = ""
 # Provider specific API keys. These will override any API keys you already have configured
 # in your Unweave account. Any keys set here are not persisted to Unweave.
 [provider_secrets]
-[provider_secrets.lambda_labs]
+[provider_secrets.lambdalabs]
 api_key = "" # Your lambdalabs API key
