--- a/config/templates/config.toml
+++ b/config/templates/config.toml
@@ -1,6 +1,6 @@
 # ID of the project to link to in your Unweave account. All commands you run in this
 # directory will be run against this project.
-project_id = "{{.ProjectID}}"
+project_uri = "{{.ProjectURI}}"
 
 # The default provider to use. You can override this with runtime flags
 default_provider = 'unweave'
